<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- App Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mp3_player"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>


    <!-- List View -->
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_sheet"
        android:layout_below="@id/toolbar" />

    <!-- Bottom Sheet -->
    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:visibility="visible">

        <!-- Currently Playing Song -->
        <TextView
            android:id="@+id/text_current_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/currently_playing_song"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="visible"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_marginTop="8dp"
            android:freezesText="true"
            android:textColor="@color/black"
            android:lines="1" />


        <!-- Seek Bar -->
        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:progress="0"
            android:progressTint="@color/primary_color"
            android:thumbTint="@color/primary_color"
            android:progressBackgroundTint="#7E6CCD"/>

        <!-- Previous, Play/Pause, Next Controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/primary_color"/>

            <Button
                android:id="@+id/button_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_pause"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/primary_color"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/primary_color"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
